fixed license header

--- a/rtt-core-extensions-config.cmake.in
+++ b/rtt-core-extensions-config.cmake.in
@@ -1,3 +1,28 @@
+ # This file is a part of CoSimA (CogIMon) project
+ #
+ # Copyright (C) 2016 by Dennis Leroy Wigand <dwigand at cor-lab dot uni-bielefeld dot de>
+ #
+ # This file may be licensed under the terms of the
+ # GNU Lesser General Public License Version 3 (the ``LGPL''),
+ # or (at your option) any later version.
+ #
+ # Software distributed under the License is distributed
+ # on an ``AS IS'' basis, WITHOUT WARRANTY OF ANY KIND, either
+ # express or implied. See the LGPL for the specific language
+ # governing rights and limitations.
+ #
+ # You should have received a copy of the LGPL along with this
+ # program. If not, go to http://www.gnu.org/licenses/lgpl.html
+ # or write to the Free Software Foundation, Inc.,
+ # 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
+ #
+ # The development of this software was supported by:
+ #   European Community’s Horizon 2020 robotics program ICT-23-2014
+ #     under grant agreement 644727 - CogIMon
+ #   CoR-Lab, Research Institute for Cognition and Robotics
+ #     Bielefeld University
+ #
+
 get_filename_component(@PROJECT_NAME_UPPER@_CONFIG_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 
 set(@PROJECT_NAME_UPPER@_INCLUDE_DIRS "${@PROJECT_NAME_UPPER@_CONFIG_DIR}/../../include/@CMAKE_PROJECT_NAME@@INSTALL_SUFFIX@/")
