fixed installation and unsigned int warning

--- a/rtt-core-extensions-config.cmake.in
+++ b/rtt-core-extensions-config.cmake.in
@@ -31,6 +31,14 @@ set(@PROJECT_NAME_UPPER@_LIBRARY_DIRS "${@PROJECT_NAME_UPPER@_CONFIG_DIR}/../../
 
 set(@PROJECT_NAME_UPPER@_LIBRARIES @LIBRARY_NAME@)
 
+set(@PROJECT_NAME_UPPER@_VERSION @INSTALL_SUFFIX@)
+
+set(@PROJECT_NAME_UPPER@_VERSION_MAJOR @INSTALL_MAJOR@)
+
+set(@PROJECT_NAME_UPPER@_VERSION_MINOR @INSTALL_MINOR@)
+
+set(@PROJECT_NAME_UPPER@_VERSION_STRING @INSTALL_SUFFIX@)
+
 # Eigen
 
 find_package(Eigen3)
