--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,11 @@
  #
 
 cmake_minimum_required(VERSION 2.8.3)
-project(rtt-core-extensions CXX)
+if (POLICY CMP0048)
+  cmake_policy(SET CMP0048 NEW)
+endif()
+
+project(rtt-core-extensions VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
@@ -35,6 +39,10 @@ set(${PROJECT_NAME_UPPER}_VERSION_MINOR 1)
 set(${PROJECT_NAME_UPPER}_VERSION "${${PROJECT_NAME_UPPER}_VERSION_MAJOR}.${${PROJECT_NAME_UPPER}_VERSION_MINOR}")
 
 set(INSTALL_SUFFIX "${${PROJECT_NAME_UPPER}_VERSION}")
+
+set(INSTALL_MAJOR ${${PROJECT_NAME_UPPER}_VERSION_MAJOR})
+
+set(INSTALL_MINOR ${${PROJECT_NAME_UPPER}_VERSION_MINOR})
 
 set(LIBRARY_NAME "${CMAKE_PROJECT_NAME}${INSTALL_SUFFIX}")
 
