--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,11 +99,11 @@ install(FILES
 # Build orocos components
 
 orocos_component(${COMPONENTS_LIB_NAME}
-                    src/rtt-kinematic-chain-ja.cpp
-                    src/rtt-kinematic-chain-jt.cpp
+                    # src/rtt-kinematic-chain-ja.cpp
+                    # src/rtt-kinematic-chain-jt.cpp
+                    src/IntrospectionReporter.cpp
                     src/FileReporting.cpp
                     src/rtt-introspection-base-test.cpp
-                    src/IntrospectionReporter.cpp
 )
 set_property(TARGET ${COMPONENTS_LIB_NAME} APPEND PROPERTY COMPILE_DEFINITIONS RTT_COMPONENT)
 
