Removed ReportingComponent from CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,13 +28,13 @@
 set(SOURCES
     # "${CMAKE_PROJECT_NAME}/rtt-jointaware-taskcontext.cpp"
     "${CMAKE_PROJECT_NAME}/rtt-introspection-base.cpp"
-    ReportingComponent.cpp       
+    #ReportingComponent.cpp       
 )
 
 set(HEADERS
     # "${CMAKE_PROJECT_NAME}/rtt-jointaware-taskcontext.hpp"
     "${CMAKE_PROJECT_NAME}/rtt-introspection-base.hpp"
-    ReportingComponent.hpp
+    #ReportingComponent.hpp
 )
 
 # Shared object
